# Civ-Rogue

./: CMakeLists.txt  README.md  main.cpp
assets/tmx/maps/: grass_chunk.tmx
assets/tmx/tsx/: grass.tsx  props.tsx  structures.tsx
include/: Command.hpp  EntityFactory.hpp  EntityManager.hpp  Game.hpp  Human.h  HumanFactory.hpp  Player.h  Player.hpp  ResourceAllocator.hpp  ResourceManager.hpp  TextDraw.hpp  Tile.hpp  World.hpp  WorldGeneration.hpp  constants.h  coordinate_calculators.hpp  game_functions.hpp  hash_function.h  input.hpp  sprite_constructors.hpp
include/ECS/: ComponentManager.hpp  EntityManager.hpp
include/ECS/Components/: Components.hpp
include/ECS/Entities/: Arrow.hpp  BluePointer.hpp  Border.hpp  Button.hpp  Entity.hpp  Eyebug.hpp  Healthbar.hpp  Human.hpp  Item.hpp  MainCharacter.hpp  Ninja.hpp  Tree.hpp  Weapon.hpp  Well.hpp
include/ECS/Entities/Animations/: AxeChop.hpp
include/ECS/Entities/UI/: Icon.hpp  Inventory.hpp
include/ECS/Systems/: AnimationSystem.hpp  ChunkgenSystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  CursorSystem.hpp  ImguiSystem.hpp  InputSystem.hpp  InteractionSystem.hpp  LifetimeSystem.hpp  MinimapSystem.hpp  MovementSystem.hpp  MusicSystem.hpp  ObjectiveSystem.hpp  RenderSystem.hpp  StateSystem.hpp  System.hpp  VelocitySystem.hpp  ViewpanSystem.hpp  ViewzoomSystem.hpp
src/: EntityFactory.cpp  EntityManager.cpp  Game.cpp  Player.cpp  ResourceAllocator.cpp  ResourceManager.cpp  World.cpp  input.cpp  main.cpp
src/Systems/: ImguiSystem.cpp
